--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "start": "node server.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^1.8.2",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
